force-app/main/default/objects/Apttus_Config2__IncentiveLimit__c/Apttus_Config2__IncentiveLimit__c.object-meta.xml
<CustomObject>
    <description>Represents a single limit associated with an incentive</description>
    <label>Incentive Limit</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Limit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>