force-app/main/default/objects/Apttus_Config2__IncentiveLimit__c/fields/Apttus_Config2__BenefitId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BenefitId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated benefit</description>
    <inlineHelpText>ID of the associated benefit</inlineHelpText>
    <label>Benefit</label>
    <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
    <relationshipLabel>Limits</relationshipLabel>
    <relationshipName>IncentiveLimits</relationshipName>
    <type>Lookup</type>
</CustomField>