force-app/main/default/objects/Apttus_Config2__IncentiveLimit__c/fields/Apttus_Config2__LimitAppliesToValueSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LimitAppliesToValueSource__c</fullName>
    <description>Indicates the scope the limit should be applied to</description>
    <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
    <label>Limit Applies To Value Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>