force-app/main/default/objects/Apttus_Config2__IncentiveLimit__c/fields/Apttus_Config2__LimitValueSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LimitValueSource__c</fullName>
    <description>The source for dynamic limit values</description>
    <inlineHelpText>The source for dynamic limit values</inlineHelpText>
    <label>Limit Value Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>