force-app/main/default/objects/Apttus_Config2__IncentiveLimit__c/fields/Apttus_Config2__RecurrenceFrequency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RecurrenceFrequency__c</fullName>
    <description>The recurrence frequency</description>
    <inlineHelpText>The recurrence frequency</inlineHelpText>
    <label>Recurrence Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>