force-app/main/default/objects/Apttus_Config2__IncentiveLimit__c/fields/Apttus_Config2__RecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RecurrenceType__c</fullName>
    <description>The limit recurrence type</description>
    <inlineHelpText>The limit recurrence type</inlineHelpText>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
                <default>true</default>
                <label>One Time</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>